// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StartPanel for board of experts unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--board-of-experts"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            boardOfExperts
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="boardOfExperts"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 640 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M211.2 96a64 64 0 10-128 0 64 64 0 10128 0zM32 256c0 17.7 14.3 32 32 32h85.6c10.1-39.4 38.6-71.5 75.8-86.6-9.7-6-21.2-9.4-33.4-9.4H96c-35.3 0-64 28.7-64 64zm461.6 32H576c17.7 0 32-14.3 32-32 0-35.3-28.7-64-64-64h-96c-11.7 0-22.7 3.1-32.1 8.6 38.1 14.8 67.4 47.3 77.7 87.4zm-102.4-61.6c-6.9-1.6-14.2-2.4-21.6-2.4h-96c-8.5 0-16.7 1.1-24.5 3.1-30.8 8.1-55.6 31.1-66.1 60.9-3.5 10-5.5 20.8-5.5 32 0 17.7 14.3 32 32 32h224c17.7 0 32-14.3 32-32 0-11.2-1.9-22-5.5-32-10.8-30.7-36.8-54.2-68.9-61.6zM563.2 96a64 64 0 10-128 0 64 64 0 10128 0zm-241.6 96a80 80 0 100-160 80 80 0 100 160zM32 416c-17.7 0-32 14.3-32 32s14.3 32 32 32h576c17.7 0 32-14.3 32-32s-14.3-32-32-32H32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel on instruct unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.instructButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageInstructExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completion provider down unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori-tooltip memori-tooltip--align-right memori--completion-provider-status--tooltip"
      >
        <div
          class="memori-tooltip--content"
        >
          <div>
            <p>
              completionProviderMajorOutage
            </p>
            <p>
              <a
                href="https://status.openai.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                completionProviderCheckStatusPage
              </a>
            </p>
          </div>
        </div>
        <div
          class="memori-tooltip--trigger"
        >
          <svg
            aria-hidden="true"
            class="memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
            color="currentColor"
            fill="none"
            height="800px"
            viewBox="0 0 24 24"
            width="800px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 16H12.01M12 8V12M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completions enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought but unlogged unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerUnlogged
        </p>
        <p>
          <button
            class="memori-button memori-button--outlined memori-button--rounded"
          >
            Login
          </button>
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerNotAllowed
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="20"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
              viewBox="0 0 48 48"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M30.106 48v-2.745a2.213 2.213 0 012.213-2.212h6.11a2.392 2.392 0 002.326-2.466v-3.223a1.834 1.834 0 01.459-1.145 2.912 2.912 0 00.712-1.926l-.007-.667a1.016 1.016 0 01.651-.952h1.067a1.363 1.363 0 001.051-.456 1.304 1.304 0 00.19-1.395 67.032 67.032 0 01-3.037-7.51 4.767 4.767 0 01-.217-1.507l-.002-4.994a14.513 14.513 0 00-.552-3.963l-.006-.022a13.959 13.959 0 00-3.137-5.702q-.479-.516-1.006-1.003a17.67 17.67 0 00-.677-.623A18.303 18.303 0 0024.194 1a19.617 19.617 0 00-12.539 4.489 17.555 17.555 0 00-3.945 21.69C9.945 31.507 11.694 38.622 12.14 46v2"
                stroke-miterlimit="10"
              />
              <path
                d="M27.917 12L31.417 12"
              />
              <path
                d="M27.917 26L31.417 26"
              />
              <path
                d="M29.667 12L29.667 26"
              />
              <path
                d="M23.992 26L19.904 12 19.226 12 15.159 26"
              />
              <path
                d="M16.854 21.133L22.276 21.133"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThoughtDisclaimerTitle
        </h2>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with existing sessionunchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.resumeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with integrationConfig unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with multilangual unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <span
          class="memori--description-text"
        >
          Lorem ipsum.
        </span>
      </p>
      <div
        class="memori--language-chooser"
      >
        <label
          for="user-lang-pref"
          id="user-lang-pref-label"
        >
          write_and_speak.iWantToTalkToIn
        </label>
        <select
          aria-labelledby="user-lang-pref-label"
          class="memori-select--button"
          id="user-lang-pref"
        >
          <option
            aria-label="Italiano"
            value="IT"
          >
            Italiano
          </option>
          <option
            aria-label="English"
            value="EN"
          >
            English
          </option>
          <option
            aria-label="Deutsch"
            value="DE"
          >
            Deutsch
          </option>
          <option
            aria-label="Español"
            value="ES"
          >
            Español
          </option>
          <option
            aria-label="Français"
            value="FR"
          >
            Français
          </option>
          <option
            aria-label="Português"
            value="PT"
          >
            Português
          </option>
          <option
            aria-label="Українська"
            value="UK"
          >
            Українська
          </option>
          <option
            aria-label="Русский"
            value="RU"
          >
            Русский
          </option>
          <option
            aria-label="Polski"
            value="PL"
          >
            Polski
          </option>
          <option
            aria-label="Suomi"
            value="FI"
          >
            Suomi
          </option>
          <option
            aria-label="Ελληνικά"
            value="EL"
          >
            Ελληνικά
          </option>
          <option
            aria-label="العربية"
            value="AR"
          >
            العربية
          </option>
          <option
            aria-label="中文"
            value="ZH"
          >
            中文
          </option>
          <option
            aria-label="日本語"
            value="JA"
          >
            日本語
          </option>
        </select>
      </div>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.anonymousUser
                </li>
                <li>
                  write_and_speak.pagePrivacyExplanationList.registeredUser
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              aria-hidden="true"
              class="memori--start-privacy-explanation-icon"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17L12.01 17"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori--start-button"
      >
        write_and_speak.tryMeButton
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            class="memori-spin--spinner"
          >
            <svg
              aria-hidden="true"
              class="memori-loading-icon"
              focusable="false"
              role="img"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with position required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--completions-enabled"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            completionsEnabled
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="completionsEnabled"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--needsPosition"
    >
      <p>
        write_and_speak.requirePositionHelp
      </p>
      <button
        class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori-button--with-icon memori--start-button"
      >
        <span
          class="memori-button--icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </span>
        widget.position
      </button>
    </div>
  </div>
</div>
`;
